Returning schools to Niagara

--- a/percent-proficiency.ipynb
+++ b/percent-proficiency.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -277,11 +277,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'county': 'NIAGARA', 'ela': {'totals': [69, 62], 'proficient': [22, 11], 'total_percent': 25.2, 'classes': ['Grade 3 ELA', 'Grade 4 ELA']}, 'name': 'ANNA MERRITT ELEMENTARY SCHOOL', 'district': 'LOCKPORT CITY SCHOOL DISTRICT', 'math': {'totals': [67, 54], 'proficient': [29, 21], 'total_percent': 41.3, 'classes': ['Grade 3 Math', 'Grade 4 Math']}}\n",
-      "{'county': 'NIAGARA', 'ela': {'totals': [60, 69], 'proficient': [11, 12], 'total_percent': 17.8, 'classes': ['Grade 3 ELA', 'Grade 4 ELA']}, 'name': 'ANNA MERRITT ELEMENTARY SCHOOL', 'district': 'LOCKPORT CITY SCHOOL DISTRICT', 'math': {'totals': [57, 62], 'proficient': [15, 29], 'total_percent': 37.0, 'classes': ['Grade 3 Math', 'Grade 4 Math']}}\n",
-      "{'county': 'NIAGARA', 'ela': {'totals': [53, 65], 'proficient': [11, 16], 'total_percent': 22.9, 'classes': ['Grade 3 ELA', 'Grade 4 ELA']}, 'name': 'ANNA MERRITT ELEMENTARY SCHOOL', 'district': 'LOCKPORT CITY SCHOOL DISTRICT', 'math': {'totals': [52, 62], 'proficient': [23, 19], 'total_percent': 36.8, 'classes': ['Grade 3 Math', 'Grade 4 Math']}}\n",
+      "{'name': 'ANNA MERRITT ELEMENTARY SCHOOL', 'ela': {'totals': [69, 62], 'classes': ['Grade 3 ELA', 'Grade 4 ELA'], 'total_percent': 25.2, 'proficient': [22, 11]}, 'math': {'totals': [67, 54], 'classes': ['Grade 3 Math', 'Grade 4 Math'], 'total_percent': 41.3, 'proficient': [29, 21]}, 'district': 'LOCKPORT CITY SCHOOL DISTRICT', 'county': 'NIAGARA'}\n",
+      "{'name': 'ANNA MERRITT ELEMENTARY SCHOOL', 'ela': {'totals': [60, 69], 'classes': ['Grade 3 ELA', 'Grade 4 ELA'], 'total_percent': 17.8, 'proficient': [11, 12]}, 'math': {'totals': [57, 62], 'classes': ['Grade 3 Math', 'Grade 4 Math'], 'total_percent': 37.0, 'proficient': [15, 29]}, 'district': 'LOCKPORT CITY SCHOOL DISTRICT', 'county': 'NIAGARA'}\n",
+      "{'name': 'ANNA MERRITT ELEMENTARY SCHOOL', 'ela': {'totals': [53, 65], 'classes': ['Grade 3 ELA', 'Grade 4 ELA'], 'total_percent': 22.9, 'proficient': [11, 16]}, 'math': {'totals': [52, 62], 'classes': ['Grade 3 Math', 'Grade 4 Math'], 'total_percent': 36.8, 'proficient': [23, 19]}, 'district': 'LOCKPORT CITY SCHOOL DISTRICT', 'county': 'NIAGARA'}\n",
       "****\n",
-      "{'county': 'ERIE', 'ela': {'totals': [77, 69, 70], 'proficient': [54, 41, 21], 'total_percent': 53.7, 'classes': ['Grade 3 ELA', 'Grade 4 ELA', 'Grade 5 ELA']}, 'name': 'ALDEN INTERMEDIATE SCHOOL', 'district': 'ALDEN CENTRAL SCHOOL DISTRICT', 'math': {'totals': [81, 73, 73], 'proficient': [62, 40, 28], 'total_percent': 57.3, 'classes': ['Grade 3 Math', 'Grade 4 Math', 'Grade 5 Math']}}\n"
+      "{'name': 'ALDEN INTERMEDIATE SCHOOL', 'ela': {'totals': [77, 69, 70], 'classes': ['Grade 3 ELA', 'Grade 4 ELA', 'Grade 5 ELA'], 'total_percent': 53.7, 'proficient': [54, 41, 21]}, 'math': {'totals': [81, 73, 73], 'classes': ['Grade 3 Math', 'Grade 4 Math', 'Grade 5 Math'], 'total_percent': 57.3, 'proficient': [62, 40, 28]}, 'district': 'ALDEN CENTRAL SCHOOL DISTRICT', 'county': 'ERIE'}\n"
      ]
     }
    ],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -311,48 +311,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "not in 2016 WESTERN NEW YORK MARITIME CHARTER SCHOOL\n",
-      "not in 2015 WESTERN NEW YORK MARITIME CHARTER SCHOOL\n",
-      "not in 2014 WESTERN NEW YORK MARITIME CHARTER SCHOOL\n",
-      "not in 2013 WESTERN NEW YORK MARITIME CHARTER SCHOOL\n",
-      "not in 2016 ALDEN INTERMEDIATE SCHOOL\n",
-      "not in 2015 ALDEN INTERMEDIATE SCHOOL\n",
-      "not in 2014 ALDEN INTERMEDIATE SCHOOL\n",
-      "not in 2013 ALDEN INTERMEDIATE SCHOOL\n",
-      "not in 2016 KENMORE EAST SENIOR HIGH SCHOOL\n",
-      "not in 2015 KENMORE EAST SENIOR HIGH SCHOOL\n",
-      "not in 2014 KENMORE EAST SENIOR HIGH SCHOOL\n",
-      "not in 2013 KENMORE EAST SENIOR HIGH SCHOOL\n",
       "not in 2016 NEWCOMER ACADEMY AT LAFAYETTE\n",
       "not in 2015 NEWCOMER ACADEMY AT LAFAYETTE\n",
       "not in 2014 NEWCOMER ACADEMY AT LAFAYETTE\n",
       "not in 2013 NEWCOMER ACADEMY AT LAFAYETTE\n",
+      "not in 2016 CHARTER SCHOOL OF INQUIRY\n",
+      "not in 2015 CHARTER SCHOOL OF INQUIRY\n",
+      "not in 2014 CHARTER SCHOOL OF INQUIRY\n",
+      "not in 2013 CHARTER SCHOOL OF INQUIRY\n",
       "not in 2013 WEST BUFFALO CHARTER SCHOOL\n",
       "not in 2016 KENMORE WEST SENIOR HIGH SCHOOL\n",
       "not in 2015 KENMORE WEST SENIOR HIGH SCHOOL\n",
       "not in 2014 KENMORE WEST SENIOR HIGH SCHOOL\n",
       "not in 2013 KENMORE WEST SENIOR HIGH SCHOOL\n",
-      "not in 2016 CHARTER SCHOOL OF INQUIRY\n",
-      "not in 2015 CHARTER SCHOOL OF INQUIRY\n",
-      "not in 2014 CHARTER SCHOOL OF INQUIRY\n",
-      "not in 2013 CHARTER SCHOOL OF INQUIRY\n",
-      "Not in 2017 142601030019 THEODORE ROOSEVELT ELEMENTARY SCHOOL\n",
-      "Not in 2017 140600010107 LAFAYETTE HIGH SCHOOL\n",
-      "Not in 2017 142601030002 ALEXANDER HAMILTON ELEMENTARY SCHOOL\n",
-      "Not in 2017 140101060003 ALDEN PRIMARY AT TOWNLINE\n",
+      "not in 2016 KENMORE EAST SENIOR HIGH SCHOOL\n",
+      "not in 2015 KENMORE EAST SENIOR HIGH SCHOOL\n",
+      "not in 2014 KENMORE EAST SENIOR HIGH SCHOOL\n",
+      "not in 2013 KENMORE EAST SENIOR HIGH SCHOOL\n",
+      "not in 2016 ALDEN INTERMEDIATE SCHOOL\n",
+      "not in 2015 ALDEN INTERMEDIATE SCHOOL\n",
+      "not in 2014 ALDEN INTERMEDIATE SCHOOL\n",
+      "not in 2013 ALDEN INTERMEDIATE SCHOOL\n",
+      "not in 2016 WESTERN NEW YORK MARITIME CHARTER SCHOOL\n",
+      "not in 2015 WESTERN NEW YORK MARITIME CHARTER SCHOOL\n",
+      "not in 2014 WESTERN NEW YORK MARITIME CHARTER SCHOOL\n",
+      "not in 2013 WESTERN NEW YORK MARITIME CHARTER SCHOOL\n",
       "Not in 2017 142601030022 KENMORE MIDDLE SCHOOL\n",
+      "Not in 2017 140101060003 ALDEN PRIMARY AT TOWNLINE\n",
       "Not in 2017 140600010039 DR MARTIN LUTHER KING, JR MULTICULTURAL INSTITUTE\n",
+      "Not in 2017 142601030002 ALEXANDER HAMILTON ELEMENTARY SCHOOL\n",
+      "Not in 2017 140600010107 LAFAYETTE HIGH SCHOOL\n",
+      "Not in 2017 142601030019 THEODORE ROOSEVELT ELEMENTARY SCHOOL\n",
       "checking 2015\n",
+      "Not in 2017 142601030022 KENMORE MIDDLE SCHOOL\n",
+      "Not in 2017 140101060003 ALDEN PRIMARY AT TOWNLINE\n",
+      "Not in 2017 140600010039 DR MARTIN LUTHER KING, JR MULTICULTURAL INSTITUTE\n",
+      "Not in 2017 142601030002 ALEXANDER HAMILTON ELEMENTARY SCHOOL\n",
+      "Not in 2017 140600010107 LAFAYETTE HIGH SCHOOL\n",
+      "Not in 2017 400301060006 LEWISTON PORTER SENIOR HIGH SCHOOL\n",
+      "Not in 2016 400301060006 LEWISTON PORTER SENIOR HIGH SCHOOL\n",
       "Not in 2017 142801060001 POTTERS ROAD SCHOOL\n",
       "Not in 2016 142801060001 POTTERS ROAD SCHOOL\n",
-      "Not in 2017 142601030019 THEODORE ROOSEVELT ELEMENTARY SCHOOL\n",
-      "Not in 2017 140600010107 LAFAYETTE HIGH SCHOOL\n",
-      "Not in 2017 142601030002 ALEXANDER HAMILTON ELEMENTARY SCHOOL\n",
-      "Not in 2017 140101060003 ALDEN PRIMARY AT TOWNLINE\n",
-      "Not in 2017 142601030022 KENMORE MIDDLE SCHOOL\n",
-      "Not in 2017 140600010039 DR MARTIN LUTHER KING, JR MULTICULTURAL INSTITUTE\n",
-      "Not in 2017 400301060006 LEWISTON PORTER SENIOR HIGH SCHOOL\n",
-      "Not in 2016 400301060006 LEWISTON PORTER SENIOR HIGH SCHOOL\n"
+      "Not in 2017 142601030019 THEODORE ROOSEVELT ELEMENTARY SCHOOL\n"
      ]
     }
    ],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -403,7 +403,7 @@
        "'Alden Intermediate'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -438,7 +438,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'CHEEKTOWAGA SCHOOL DISTRICT', 'dist_key': 'CHEEKTOWAGA CENTRAL SCHOOL DISTRICT', 'schools': {'140701060007': 'Cheektowaga Middle', '140701060004': 'Union East', '140701060008': 'Pine Hill'}}\n"
+      "{'400400010000': {'name': 'LOCKPORT SCHOOL DISTRICT', 'schools': {}, 'dist_key': 'LOCKPORT CITY SCHOOL DISTRICT'}, '401001060000': {'name': 'STARPOINT SCHOOL DISTRICT', 'schools': {}, 'dist_key': 'STARPOINT CENTRAL SCHOOL DISTRICT'}, '401201060000': {'name': 'ROY-HART SCHOOL DISTRICT', 'schools': {}, 'dist_key': 'ROYALTON-HARTLAND CENTRAL SCHOOL DISTRICT'}, '400701060000': {'name': 'NIAGARA WHEATFIELD SCH. DIST.', 'schools': {}, 'dist_key': 'NIAGARA-WHEATFIELD CENTRAL SCHOOL DISTRICT'}, '400301060000': {'name': 'LEW-PORT SCHOOL DISTRICT', 'schools': {}, 'dist_key': 'LEWISTON-PORTER CENTRAL SCHOOL DISTRICT'}, '401501060000': {'name': 'WILSON SCHOOL DISTRICT', 'schools': {}, 'dist_key': 'WILSON CENTRAL SCHOOL DISTRICT'}, '400900010000': {'name': 'NORTH TONAWANDA SCH. DIST.', 'schools': {}, 'dist_key': 'NORTH TONAWANDA CITY SCHOOL DISTRICT'}, '400601060000': {'name': 'NEWFANE SCHOOL DISTRICT', 'schools': {}, 'dist_key': 'NEWFANE CENTRAL SCHOOL DISTRICT'}, '401301040000': {'name': 'BARKER SCHOOL DISTRICT', 'schools': {}, 'dist_key': 'BARKER CENTRAL SCHOOL DISTRICT'}, '400800010000': {'name': 'NIAGARA FALLS SCHOOL DISTRICT', 'schools': {}, 'dist_key': 'NIAGARA FALLS CITY SCHOOL DISTRICT'}}\n"
      ]
     }
    ],
@@ -465,7 +465,7 @@
     "        if school not in charters:\n",
     "            if value['name'] == info['district'] and 'SCHOOL DISTRICT' not in info['name']:\n",
     "                niagara_list[distict]['schools'][school] = clean_names[school]\n",
-    "print(erie_list['140701060000'])"
+    "print(niagara_list)"
    ]
   },
   {
